# black-widow-core

./: .env.localstack  .env.template  .gitignore  .prospector.yml  Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  poetry.toml  pyproject.toml  serverless.yml
.github/workflows/: main.yml
core/: abstract.py  enums.py  game.py
scripts/: integration-test.sh  unit-test.sh
src/: adapters.py  handlers.py  utils.py
src/core/: abstract.py  cards.py  consts.py  dispatchers.py  enums.py  exceptions.py  game.py  mixins.py  schemas.py  state.py  steps.py  types.py  utils.py
src/data_access/: __init__.py  dynamodb.py  exceptions.py  game.py  lobby.py  user.py
src/enums/: websocket.py
src/schemas/: base.py  game.py  lobby.py  user.py  websocket.py
src/services/: exceptions.py  game.py  websocket.py
src/settings/: __init__.py  aws.py
src/users/: app.py
src/users/.chalice/: config.json
tests/: conftest.py
tests/integration/: conftest.py
tests/integration/test_core/: test_game.py  test_pass.py
tests/integration/test_services/: test_game.py  test_websocket_handler.py
tests/unit/test_core/: test_cards.py  test_game.py  test_utils.py
tests/unit/test_core/test_steps/: test_card_exchange_step.py  test_finished_step.py  test_round_step.py
tests/unit/test_utils/: test_is_list_contained_by_list.py
