[tool.poetry]
name = "black-widow-backend"
version = "0.1.0"
description = ""
authors = ["jakub-figat"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.9.0"
boto3 = "^1.24.93"
mypy-boto3-dynamodb = "^1.24.74"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
coverage = "^6.3.2"
pytest = "^7.1.1"
prospector = "^1.7.7"


[tool.black]
line-length = 119
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
line_length = 119
lines_after_imports = 2
profile = "black"
skip_glob = ["venv/*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
